--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UDinger | Your Quantum Readiness Partners | Netherlands & India</title>
-    <meta name="description" content="Professional quantum consulting and training services in Netherlands and India helping businesses optimize operations through quantum computing solutions.">
+    <meta name="description" content="Professional quantum consulting & training services. 
+        Netherlands & India">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
