--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UDinger | Your Quantum Readiness Partners | Netherlands & India</title>
+    <title>UDinger - Quantum</title>
     <meta name="description" content="Professional quantum consulting & training services. 
         Netherlands & India">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
                     <h1 class="brand-title">UDinger</h1>
                     <div class="brand-taglines">
                         <span class="brand-service">Quantum Computing Consulting & Training</span>
-                        <span class="brand-locations">Netherlands & India</span>
+                        <span class="brand-locations">🇳🇱|🇮🇳 </span>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <ul class="service-details">
                             <li>Hands-on deployment of quantum optimization solutions</li>
                             <li>Comprehensive training programs for technical teams</li>
-                            <li>Partnership with leading quantum cloud providers (IBM, Microsoft, AWS)</li>
+                            
                         </ul>
                     </div>
                 </div>
