--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UDinger - Quantum</title>
-    <meta name="description" content="Professional quantum consulting & training services. 
-        Netherlands & India">
+    <title>UDinger | Your Quantum Readiness Partners | Netherlands & India</title>
+    <meta name="description" content="Professional quantum consulting and training services in Netherlands and India helping businesses optimize operations through quantum computing solutions.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -39,7 +38,7 @@
                     <h1 class="brand-title">UDinger</h1>
                     <div class="brand-taglines">
                         <span class="brand-service">Quantum Computing Consulting & Training</span>
-                        <span class="brand-locations">🇳🇱|🇮🇳 </span>
+                        <span class="brand-locations">Netherlands & India</span>
                     </div>
                 </div>
             </div>
@@ -101,7 +100,7 @@
                         <ul class="service-details">
                             <li>Hands-on deployment of quantum optimization solutions</li>
                             <li>Comprehensive training programs for technical teams</li>
-                            
+                            <li>Partnership with leading quantum cloud providers (IBM, Microsoft, AWS)</li>
                         </ul>
                     </div>
                 </div>
